- Tạo giao diện cho danh sách tour hiển thị danh sách với token của 1 tài khoản duy nhất.

--- a/TravelAssistant/app/src/main/res/values/strings.xml
+++ b/TravelAssistant/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="via_sms">   Via sms</string>
     <string name="via_email">Via email</string>
     <string name="submit_button">Submit</string>
+    <string name="search_hint">Search Here...</string>
 </resources>
