--- a/TravelAssistant/app/src/main/res/values/strings.xml
+++ b/TravelAssistant/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="phone_label">PHONE</string>
     <string name="confirm_password_label">CONFIRM PASSWORD</string>
     <string name="sign_in">Sign In</string>
+    <string name="list_tour">List Tour</string>
     <string name="forgot_password">Forgot Password</string>
     <string name="sign_up">Sign Up</string>
     <string name="sign_up_with_facebook">Sign Up With Facebook</string>
@@ -22,6 +23,9 @@
     <string name="via_email">Via email</string>
     <string name="submit_button">Submit</string>
     <string name="search_hint">Search Here...</string>
-    <string name="title_dialog">Thoát ứng dụng</string>
-    <string name="message_dialog">Nhấn YES để thoát.\nNhấn NO để trở lại.</string>
+    <string name="title_dialog">Exit</string>
+    <string name="message_dialog">Press YES to exit.\nPress NO to cancel.</string>
+    <string name="title_activity_stop_point_map">Map</string>
+    <string name="create_stop_point">CREATE STOP POINT</string>
+    <string name="additional_info">(first and second point are origin and destination)</string>
 </resources>
