--- a/TravelAssistant/app/src/main/res/values/strings.xml
+++ b/TravelAssistant/app/src/main/res/values/strings.xml
@@ -24,4 +24,16 @@
     <string name="search_hint">Search Here...</string>
     <string name="title_dialog">Thoát ứng dụng</string>
     <string name="message_dialog">Nhấn YES để thoát.\nNhấn NO để trở lại.</string>
+    <string name="create_tour_str">Create tour</string>
+    <string name="tour_name_label">Tour name</string>
+    <string name="start_date_label">Start date</string>
+    <string name="end_day_label">End date</string>
+    <string name="adults_label">Adults</string>
+    <string name="children_label">Children</string>
+    <string name="min_cost_label">Min cost</string>
+    <string name="max_cost_label">Max cost</string>
+    <string name="choose_tour_image_hint">Choose tour image</string>
+    <string name="radio_button_create_tour">This is your private trip ?</string>
+    <string name="create_text_button">Create</string>
+    <string name="select_date_hint">Select date</string>
 </resources>
