Tạo màn hình hiển thị danh sách điểm dừng

--- a/TravelAssistant/app/src/main/res/values/strings.xml
+++ b/TravelAssistant/app/src/main/res/values/strings.xml
@@ -40,4 +40,5 @@
     <string name="title_activity_stop_point_map">Map</string>
     <string name="create_stop_point">CREATE STOP POINT</string>
     <string name="additional_info">(first and second point are origin and destination)</string>
+    <string name="list_stop_point_label">List Stop Point</string>
 </resources>
