--- a/TravelAssistant/app/src/main/res/values/strings.xml
+++ b/TravelAssistant/app/src/main/res/values/strings.xml
@@ -199,7 +199,11 @@
     <string name="create_origin_destination">Create the origin/destionation point</string>
     <string name="note_origin_destination">(The first point is the origin and the second point is destination)</string>
 
-    <string name="senderTitle">Sender: </string>
+    <string name="senderTitle">Host name: </string>
     <string name="TourNameTitle">Tour name: </string>
     <string name="timeTitle">Time: </string>
+    <string name="fullnameTitle">Full Name: </string>
+    <string name="IdTitle">ID: </string>
+    <string name="editProfile">Edit profile ></string>
+    <string name="logout">Logout</string>
 </resources>
