--- a/TravelAssistant/app/src/main/res/values/strings.xml
+++ b/TravelAssistant/app/src/main/res/values/strings.xml
@@ -56,6 +56,8 @@
     <string name="stop_point_time">Time</string>
     <string name="stop_point_select_date">Select date</string>
     <string name="stop_point_save">SAVE</string>
+    <string name="comments_title">Comments</string>
+    <string name="members_title">Members</string>
     <string-array name="list_province_name">
         <item>Hồ Chí Minh</item>
         <item>Hà Nội</item>
