- Thêm chức năng chỉnh sửa thông tin cá nhân của người dùng - Thêm chức năng đổi mật khẩu tài khoản người dùng

--- a/TravelAssistant/app/src/main/res/values/strings.xml
+++ b/TravelAssistant/app/src/main/res/values/strings.xml
@@ -206,6 +206,6 @@
     <string name="timeTitle">Time: </string>
     <string name="fullnameTitle">Full Name: </string>
     <string name="IdTitle">ID: </string>
-    <string name="editProfile">Edit profile ></string>
+    <string name="editProfile">Edit Profile</string>
     <string name="logout">Logout</string>
 </resources>
