Thêm chức năng quên mật khẩu, đăng xuất và ghi nhớ đăng nhập

--- a/TravelAssistant/app/src/main/res/values/strings.xml
+++ b/TravelAssistant/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="sign_up">Sign Up</string>
     <string name="sign_up_with_facebook">Sign Up With Facebook</string>
     <string name="sign_up_with_google">Sign Up With Google</string>
-    <string name="instruct_forgot_password">Select which contact details should we use to reset your password:</string>
+    <string name="instruct_forgot_password">Select which contact details you will use to reset your password:</string>
     <string name="via_sms">   Via sms</string>
     <string name="via_email">Via email</string>
     <string name="submit_button">Submit</string>
