--- a/TravelAssistant/app/src/main/res/values/strings.xml
+++ b/TravelAssistant/app/src/main/res/values/strings.xml
@@ -209,4 +209,5 @@
     <string name="editProfile">Edit Profile</string>
     <string name="logout">Logout</string>
     <string name="invitationTitle" ><strong>You have a new invitation!!</strong></string>
+    <string name="total">Total: </string>
 </resources>
