--- a/TravelAssistant/app/src/main/res/values/strings.xml
+++ b/TravelAssistant/app/src/main/res/values/strings.xml
@@ -35,7 +35,7 @@
     <string name="min_cost_label">Min cost</string>
     <string name="max_cost_label">Max cost</string>
     <string name="choose_tour_image_hint">Choose tour image</string>
-    <string name="radio_button_create_tour">This is your private trip ?</string>
+    <string name="radio_button_create_tour">Is this your private trip ?</string>
     <string name="create_text_button">Create</string>
     <string name="select_date_hint">Select date</string>
     <string name="title_dialog">Exit</string>
@@ -198,8 +198,8 @@
 
     </string-array>
     <string name="save">save</string>
-    <string name="create_origin_destination">Create the origin/destionation point</string>
-    <string name="note_origin_destination">(The first point is the origin and the second point is destination)</string>
+    <string name="create_origin_destination">Create the origin/destination point</string>
+    <string name="note_origin_destination">(The first point is the origin and the second point is the destination)</string>
 
     <string name="senderTitle">Host name: </string>
     <string name="TourNameTitle">Tour name: </string>
