--- a/TravelAssistant/app/src/main/res/values/strings.xml
+++ b/TravelAssistant/app/src/main/res/values/strings.xml
@@ -199,7 +199,7 @@
     </string-array>
     <string name="save">save</string>
     <string name="create_origin_destination">Create the origin/destination point</string>
-    <string name="note_origin_destination">(The first point is the origin and the second point is the destination)</string>
+    <string name="note_origin_destination">(The first point is origin and the second point is destination)</string>
 
     <string name="senderTitle">Host name: </string>
     <string name="TourNameTitle">Tour name: </string>
